# sketch

./: README.md  pyproject.toml
mkdocs/: __init__.py  core.py  site.py  utils.py
mkdocs/handlers/: base.py  files.py  navigation.py  pages.py
mkdocs/statics/css/: base.css  bootstrap-docs-4.1.3.min.css
mkdocs/statics/js/: lunr-2.3.9.js
mkdocs/templates/: base.html
